# v1-162-part1-reviewed

./: requirements.txt  zzz-nbv1-162-part1.ipynb
v1-162-part1/: pyproject.toml
v1-162-part1/app/: rag_chain.py  server.py
v1-162-part1/rag-data-loader/: rag_load_and_process.py
